Fixed login and signup text lable alignment; Fixed problem in signup action

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -161,7 +161,7 @@ label {
     float: left;
     width: 10em;
     margin-right: 1em;
-    text-align: right;
+    text-align: left;
 }
 
 
